# python-pytest-testing-project-79

./: .env  .gitignore  Makefile  Notes.md  README.md  pyproject.toml  ruff.toml  setup.cfg  temp.ipynb  temp.py
.github/workflows/: ci.yml  lint-test.yml
page_loader/: __init__.py  assets_processor.py  download_manager.py  logger.py  page_loader.py  path_processor.py  progress_bar.py  resource_processor.py  settings.json  url_utils.py
page_loader/exceptions/: io_exceptions.py  network_exceptions.py
page_loader/scripts/: main.py
page_loader/tests/: conftest.py  test_page_loader.py  test_url_utils.py
page_loader/tests/fixtures/: asset.json  expected.html  expected_without_updated_links.html  fixtures.py  retrieved.html
temp/: paalso-github-io-simple_web_page.html  paalso-github-io-simple_web_page_1.html  paalso-github-io-simple_web_page_2.html
tests/: test_hello.py  test_page_loader.py  test_path_processor.py  test_resource_processor.py  test_url_utils.py
tests/fixtures/: expected.html  fixtures.py  log_content.txt  resources.json  retrieved.html  retrieved_without_resources.html
