[project]
name = "hexlet-code"
version = "0.1.0"
description = "A command line utility to download web pages from the Internet to the local machine."
authors = [
    { name = "paalso", email = "40a.pvl@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "requests-mock>=1.12.1",
    "ruff>=0.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]

[project.scripts]
page-loader = "page_loader.scripts.main:main"
